<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:orientation="vertical"
    android:id="@+id/lLMainLay"
    android:background="@color/white"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/lLayMain"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/nav_title"
            android:layout_marginStart="13dp"
            android:text="@string/hi_eng"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"/>

        <TextView
            android:id="@+id/nav_name"
            android:layout_marginStart="3dp"
            android:text=""
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/grey_dull"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/lLayTvToday"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/nav_tvToday"
            android:layout_marginStart="13dp"
            android:text="@string/new_games_from_tv_today_eng"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        android:background="@color/grey_dull"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/lLayTutorial"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/nav_Tutorial"
            android:text="@string/tutorial_eng"
            android:gravity="center_vertical"
            android:layout_marginStart="13dp"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

    <View
        android:background="@color/grey_dull"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/lLayShare"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/nav_share"
            android:layout_marginStart="13dp"
            android:text="@string/share_eng"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        android:background="@color/grey_dull"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/lLaySetting"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/nav_Setting"
            android:layout_marginStart="13dp"
            android:text="@string/setting_eng"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>


    </LinearLayout>

    <View
        android:background="@color/grey_dull"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:id="@+id/lLayPrivacy"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/nav_Privacy"
            android:layout_marginStart="13dp"
            android:text="@string/privacy_policy_eng"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        android:background="@color/grey_dull"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        android:visibility="gone"
        android:id="@+id/lLayTerms"
        android:layout_width="match_parent"
        android:layout_height="50dp">

        <TextView
            android:id="@+id/nav_Terms"
            android:layout_marginStart="13dp"
            android:text="@string/terms_uses"
            android:gravity="center_vertical"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>

    </LinearLayout>

    <View
        android:background="@color/grey_dull"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

</LinearLayout>