<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.activity.ShabdamSettingsActivity"
    android:background="#eee">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/_50sdp"
        android:background="@drawable/radius_background"
        android:elevation="@dimen/_10sdp">

        <ImageView
            android:id="@+id/iv_back_btn"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:src="@drawable/back_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:layout_toRightOf="@id/iv_back_btn"
            android:text="@string/settings_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_15sdp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_15sdp"
            android:text="@string/version_code"
            android:layout_alignParentRight="true"
            android:textColor="@color/dark_grey"
            android:textSize="@dimen/_10sdp" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/notification"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />

        <Switch
            android:id="@+id/switch_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:checked="true"
            android:layout_marginEnd="15dp"
            android:switchMinWidth="45dp"
            android:thumb="@drawable/custom_thumb"
            android:track="@drawable/custom_track"
            android:trackTintMode="@color/blue"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/line_color_shb" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/sound_h"
            android:textColor="@color/black"
            android:textSize="@dimen/_13sdp" />

        <Switch
            android:id="@+id/switch_music"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="15dp"
            android:switchMinWidth="45dp"
            android:thumb="@drawable/custom_thumb"
            android:track="@drawable/custom_track"
            android:trackTintMode="@color/blue"
            tools:ignore="UseSwitchCompatOrMaterialXml" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="25dp"
        android:layout_marginRight="15dp"
        android:background="@color/line_color_shb" />


    <RelativeLayout
        android:id="@+id/rl_feedback_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/feedback"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toLeftOf="@id/iv_email_icon"
            android:text="@string/email_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />

        <ImageView
            android:id="@+id/iv_email_icon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:src="@drawable/email_icon" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/line_color_shb" />




    <!-- <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/_25sdp">

         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginLeft="@dimen/_15sdp"
             android:text="@string/community"
             android:textColor="@color/text_color_black"
             android:textSize="@dimen/_13sdp" />

         <ImageView
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_marginRight="@dimen/_10sdp"
             android:layout_toLeftOf="@id/iv_facebook_icon"
             android:src="@drawable/twitter_icon" />

         <ImageView
             android:id="@+id/iv_facebook_icon"
             android:layout_width="@dimen/_20sdp"
             android:layout_height="@dimen/_20sdp"
             android:layout_alignParentRight="true"
             android:layout_marginRight="@dimen/_15sdp"
             android:src="@drawable/facebook_icon" />
     </RelativeLayout>
     <View
         android:layout_width="match_parent"
         android:layout_height="1dp"
         android:layout_marginRight="@dimen/_15sdp"
         android:layout_marginLeft="@dimen/_15sdp"
         android:layout_marginTop="@dimen/_25sdp"
         android:background="@color/line_color"/>-->


    <RelativeLayout
        android:id="@+id/rl_faq_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/question_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:layout_marginRight="@dimen/_10sdp"
            android:layout_toLeftOf="@id/iv_faq_icon"
            android:text="@string/faq_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />

        <ImageView
            android:id="@+id/iv_faq_icon"
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:src="@drawable/faq_icon" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/line_color_shb" />

    <RelativeLayout
        android:id="@+id/rl_submit_word"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/submit_the_word"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/line_color_shb" />

    <RelativeLayout
        android:id="@+id/rl_PrivacyPolicy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/privacy_policy_"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/line_color_shb" />

    <RelativeLayout
        android:id="@+id/rl_Term"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="Terms &amp; uses"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />


    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/line_color_shb" />

    <RelativeLayout
        android:id="@+id/rl_gameLanguage"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/game_langauge"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />


        <LinearLayout
            android:layout_width="150dp"
            android:layout_height="28dp"
            android:padding="1dp"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="10dp"
            android:gravity="center"
            android:background="@color/black"
            android:orientation="horizontal"
            android:baselineAligned="false">

            <LinearLayout
                android:id="@+id/llHindiLan"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/white_bg_lan">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:id="@+id/tvHindi"
                    android:text="Hindi"
                    android:textColor="@color/black"
                    android:textSize="11sp"/>
            </LinearLayout>

            <LinearLayout
                android:id="@+id/llEngLang"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:background="@drawable/black_bg_lan">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="match_parent"
                    android:id="@+id/tvEng"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:textColor="@color/white"
                    android:text="English"
                    android:textSize="11sp" />
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rl_logout_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_25sdp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_15sdp"
            android:text="@string/logout_text"
            android:textColor="@color/text_color_black"
            android:textSize="@dimen/_13sdp" />

        <ImageView
            android:layout_width="@dimen/_20sdp"
            android:layout_height="@dimen/_20sdp"
            android:layout_alignParentRight="true"
            android:layout_marginRight="@dimen/_15sdp"
            android:src="@drawable/uttar_dekho_icon" />
    </RelativeLayout>

    <View
        android:id="@+id/view_log_out"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="@dimen/_15sdp"
        android:visibility="gone"
        android:layout_marginTop="@dimen/_25sdp"
        android:layout_marginRight="@dimen/_15sdp"
        android:background="@color/line_color_shb" />
</LinearLayout>